--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/todo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f3f3f3" />
+    <meta
+      name="title"
+      content="ToDo"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ToDo App, una aplicación web para hacer una lista de tus tareas."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="todo, to do app, app to do, app lista de tareas, todo webpapp, todo example webapp, lista para hacer"
+    >
+    <meta
+      name="og:title"
+      content="ToDo"
+    />
+    <meta
+      name="og:description"
+      content="ToDo App, una aplicación web para hacer una lista de tus tareas."
+    />
+    <meta
+      name="og:image"
+      content="%PUBLIC_URL%/todo.webp"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/todo.webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ToDo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
